<?xml version="1.0"?>
<package>
  <name>numob_slam</name>
  <version>0.0.1</version>
  <description>The numob slam ros package</description>

  <maintainer email="z@numob.com">Peijun Zhao</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/nuodong/numob_slam.git</url>
  <url type="repository"></url>
  <url type="bugtracker"></url>

  <author>Peijun Zhao</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>numob_mobile_base</run_depend>


</package>
